<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:font="http://schemas.android.com/apk/res-auto"
        tools:context=".Activities.Login"
        android:layout_alignParentBottom="true"
        android:background="@drawable/multicolor_background"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_weight="2.6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4">
            <TextView
                android:id="@+id/text1"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/accent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center|bottom"

                />
            <TextView
                android:id="@+id/text2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_slogan"
                android:textColor="@color/accent"
                android:gravity="center|top"
                android:textSize="18sp" />




        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="2dp"

            android:weightSum="4">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:progressBackgroundTint="@color/accent"
                android:backgroundTint="@color/accent"
                android:theme="@style/DarkProgress"
                android:visibility="visible"
                tools:targetApi="lollipop" />
            <LinearLayout
                android:id="@+id/mobileAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"

                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:layout_marginTop="62dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp">

                <Spinner
                    android:id="@+id/spCCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="fill_vertical"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:popupBackground="#ffffff"
                    android:layout_marginRight="6dp"/>

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:padding="12dp"
                    android:gravity="fill_vertical"
                    android:hint="@string/prompt_email"
                    android:inputType="number"
                    android:textColor="@color/accent"
                    android:textColorHint="@color/divider"
                    android:maxLength="10"
                    android:layout_marginLeft="6dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
            <Button
                android:id="@+id/logIn"
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:onClick="logIn"
                android:visibility="visible"
                android:background="@drawable/primary_dark_ripple"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp">
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/resend_code"
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Tap to resend code"
                    android:textSize="12sp"
                    android:layout_marginTop="6dp"
                    android:onClick="resendCode"
                    android:textColor="#ffcccc"/>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/timer"
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="60s"
                    android:textSize="12sp"
                    android:textAlignment="viewEnd"
                    android:layout_marginTop="6dp"
                    android:onClick="resendCode"
                    android:textColor="#ffcccc"/>
            </LinearLayout>
            <TextView
                android:layout_weight="0.8"
                android:id="@+id/text5"
                android:visibility="visible"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Or"
                android:gravity="center|top"
                android:textColor="@color/primary_dark"/>


            <LinearLayout
                android:layout_weight="0.1"
                android:id="@+id/signInWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:visibility="visible"
                android:background="#ffffff"
                android:onClick="signInWithGoogle"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp">
                <ImageView
                    android:layout_margin="6dp"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/gicon" />
                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In with Google"
                    android:textColor="@color/common_google_signin_btn_text_light"
                    android:gravity="left"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>