<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Settings"
            app:titleTextColor="@color/accent"
            android:background="@color/primary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_back"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goBack"/>
                <TextView
                    android:id="@+id/activtiyname"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:text="Profile"
                    android:textColor="@color/accent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_toEndOf="@+id/back"/>
                <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/logout_img"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:background="@drawable/ripple"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="18dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="signOut"
                    android:src="@drawable/ic_sign_out" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.0">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="180dp"
                    android:layout_height="210dp"
                    android:transitionName="@string/transition_string"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user"
                    app:civ_border_width="1.5dp"
                    app:civ_border_color="#4CAF50">
                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/edit_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:background="@drawable/cricle_ripple"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_camera_"
                    android:onClick="pickProfileImage"
                    />


            </FrameLayout>
            <ProgressBar
                android:id="@+id/pbImageLoading"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                style="?android:attr/progressBarStyleSmall"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:focusable="true"
        >
        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/primary_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:paddingLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/secondary_text"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_weight="1.8"/>
            <ImageView
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_edit"
                android:layout_weight="0.2"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:padding="16dp">
        <TextView
            android:id="@+id/noteTitle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/secondary_text"
            android:text="@string/note"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_weight="0.3"
        android:weightSum="5"
        >
        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:background="#ffffff"
            android:textColor="@color/primary_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="2"
            android:padding="16dp">

            <TextView
                android:id="@+id/t_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="University Chowk, Bahawalpur, Pakistan"
                android:textColor="@color/secondary_text"
                android:enabled="false"
                android:layout_weight="1.8"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/pick_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:background="@drawable/ripple"
                android:layout_weight="0.2"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#bebebe"
            android:visibility="invisible"
            android:layout_marginStart="14dp" />

    </LinearLayout>

</LinearLayout>